Bug #12638 --> Fix nsPipe2::GetLength to return the number of unread bytes in the pipe. r=warren, a=cyeh